# rag-apps

./: .env.example  README.md  llmops_vectordatabase_qdrant_01.py  main.py  pyproject.toml  qdrant_api.py  qdrant_streamlit_app.py  requirements.txt  similarity_search_pgvector.py  sotu_address_obama.txt  test_qdrant_streamlit_app.py  web_scrape_app_faiss.py  web_scrape_app_qdrant.py
faiss_index/: index.faiss  index.pkl
